--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@beauagst/vue-whiteboard": "^0.1.6",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-drawing": "^0.2.3"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
