--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-screen-size": "^1.0.1",
+    "vue-window-size": "^1.1.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
