ADD: Control panel

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.5.1",
     "vue": "^3.0.0",
     "vue-screen-size": "^1.0.1",
     "vue-window-size": "^1.1.2",
