--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "primeicons": "^4.1.0",
     "primevue": "^3.5.1",
+    "socket.io-client": "^4.1.3",
     "vue": "^3.0.0",
     "vue-screen-size": "^1.0.1",
     "vue-window-size": "^1.1.2",
