--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "morgan": "^1.10.0",
     "socket.io": "^4.1.2",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
